--- a/layout/activity_registo.xml
+++ b/layout/activity_registo.xml
@@ -9,12 +9,81 @@
     <TextView
         android:id="@+id/textView"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
+        android:layout_height="70dp"
         android:layout_alignParentTop="true"
-        android:layout_marginStart="87dp"
-        android:layout_marginTop="95dp"
-        android:text="@string/registo"
-        tools:layout_editor_absoluteX="159dp"
-        tools:layout_editor_absoluteY="247dp" />
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="14dp"
+        android:text="Registo"
+        android:textSize="50sp"
+        tools:layout_editor_absoluteX="107dp"
+        tools:layout_editor_absoluteY="21dp" />
+
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="106dp"
+        android:orientation="vertical">
+
+
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
+
+            <EditText
+                android:id="@+id/name_space"
+                android:layout_width="326dp"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="20dp"
+                android:hint="Nome"
+                android:inputType="textPersonName" />
+
+
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
+
+            <EditText
+                android:id="@+id/email_space"
+                android:layout_width="326dp"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="20dp"
+                android:hint="Email"
+                android:inputType="textEmailAddress" />
+
+
+
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
+
+            <EditText
+                android:id="@+id/password_space"
+                android:layout_width="326dp"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="20dp"
+                android:hint="Password"
+                android:inputType="textPassword|numberPassword" />
+
+
+
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
+
+            <EditText
+                android:id="@+id/cpassword_space"
+                android:layout_width="326dp"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="20dp"
+                android:hint="Confirm Password"
+                android:inputType="textPassword|numberPassword" />
+
+
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="REGISTAR"
+            android:id="@+id/registo_button"
+            />
+
+
+    </LinearLayout>
 </RelativeLayout>
