--- a/layout/activity_main.xml
+++ b/layout/activity_main.xml
@@ -7,6 +7,16 @@
     android:background="@drawable/menu_gradient"
     tools:context=".MainActivity">
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="43dp"
+        android:hint="FITapp"
+        android:textColorHint="#ffffff"
+        android:textSize="75dp"
+        />
     <EditText
         android:id="@+id/name_button"
         android:layout_width="180dp"
@@ -14,9 +24,10 @@
         android:layout_centerInParent="true"
         android:background="#11000000"
         android:ems="10"
-       android:hint="Nome"
+       android:hint="Email"
         android:textColorHint="#ffffff"
-        android:inputType="textPersonName" />
+        android:textColor="#ffffff"
+        android:inputType="textEmailAddress" />
 
     <EditText
         android:id="@+id/pass_button"
@@ -29,6 +40,7 @@
         android:ems="10"
         android:hint="Password"
         android:textColorHint="#ffffff"
+        android:textColor="#ffffff"
         android:inputType="textPassword" />
 
 
@@ -43,6 +55,15 @@
         android:layout_marginBottom="21dp"
         android:background="#11000000" />
 
+    <TextView
+        android:id="@+id/esqueceu_password"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="154dp"
+        android:hint="Esqueceu a Password"
+        android:textColorHint="#ffffff" />
 
 
     <Button
@@ -55,6 +76,12 @@
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="92dp"
         android:text="Login" />
+
+    <Button
+        android:layout_width="161dp"
+        android:layout_height="15dp"
+        android:layout_alignTop="@+id/esqueceu_password"
+        android:layout_centerHorizontal="true" />
 
     <ProgressBar
         android:id="@+id/login_progress"
