--- a/layout/activity_registo.xml
+++ b/layout/activity_registo.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/menu_gradient"
     tools:context=".Registo">
 
     <TextView
@@ -14,6 +15,7 @@
         android:layout_centerHorizontal="true"
         android:layout_marginTop="14dp"
         android:text="Registo"
+        android:textColor="#ffffff"
         android:textSize="50sp"
         tools:layout_editor_absoluteX="107dp"
         tools:layout_editor_absoluteY="21dp" />
@@ -36,6 +38,8 @@
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="20dp"
                 android:hint="Nome"
+                android:textColorHint="#ffffff"
+                android:textColor="#ffffff"
                 android:inputType="textPersonName" />
 
 
@@ -48,6 +52,8 @@
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="20dp"
                 android:hint="Email"
+                android:textColorHint="#ffffff"
+                android:textColor="#ffffff"
                 android:inputType="textEmailAddress" />
 
 
@@ -61,7 +67,9 @@
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="20dp"
                 android:hint="Password"
-                android:inputType="textPassword|numberPassword" />
+                android:textColorHint="#ffffff"
+                android:textColor="#ffffff"
+                android:inputType="textPassword" />
 
 
 
@@ -74,7 +82,9 @@
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="20dp"
                 android:hint="Confirm Password"
-                android:inputType="textPassword|numberPassword" />
+                android:textColorHint="#ffffff"
+                android:textColor="#ffffff"
+                android:inputType="textPassword" />
 
 
         <Button
