--- a/layout/activity_registo.xml
+++ b/layout/activity_registo.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/menu_gradient"
     tools:context=".Registo">
 
     <TextView
@@ -14,6 +15,7 @@
         android:layout_centerHorizontal="true"
         android:layout_marginTop="14dp"
         android:text="Registo"
+        android:textColor="#ffffff"
         android:textSize="50sp"
         tools:layout_editor_absoluteX="107dp"
         tools:layout_editor_absoluteY="21dp" />
@@ -27,54 +29,62 @@
         android:orientation="vertical">
 
 
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content">
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content">
 
-            <EditText
-                android:id="@+id/name_space"
-                android:layout_width="326dp"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="20dp"
-                android:hint="Nome"
-                android:inputType="textPersonName" />
-
-
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content">
-
-            <EditText
-                android:id="@+id/email_space"
-                android:layout_width="326dp"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="20dp"
-                android:hint="Email"
-                android:inputType="textEmailAddress" />
+        <EditText
+            android:id="@+id/name_space"
+            android:layout_width="326dp"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="20dp"
+            android:hint="Nome"
+            android:textColorHint="#ffffff"
+            android:textColor="#ffffff"
+            android:inputType="textPersonName" />
 
 
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content">
 
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content">
-
-            <EditText
-                android:id="@+id/password_space"
-                android:layout_width="326dp"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="20dp"
-                android:hint="Password"
-                android:inputType="textPassword|numberPassword" />
+        <EditText
+            android:id="@+id/email_space"
+            android:layout_width="326dp"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="20dp"
+            android:hint="Email"
+            android:textColorHint="#ffffff"
+            android:textColor="#ffffff"
+            android:inputType="textEmailAddress" />
 
 
 
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content">
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content">
 
-            <EditText
-                android:id="@+id/cpassword_space"
-                android:layout_width="326dp"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="20dp"
-                android:hint="Confirm Password"
-                android:inputType="textPassword|numberPassword" />
+        <EditText
+            android:id="@+id/password_space"
+            android:layout_width="326dp"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="20dp"
+            android:hint="Password"
+            android:textColorHint="#ffffff"
+            android:textColor="#ffffff"
+            android:inputType="textPassword" />
+
+
+
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content">
+
+        <EditText
+            android:id="@+id/cpassword_space"
+            android:layout_width="326dp"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="20dp"
+            android:hint="Confirm Password"
+            android:textColorHint="#ffffff"
+            android:textColor="#ffffff"
+            android:inputType="textPassword" />
 
 
         <Button
@@ -82,7 +92,8 @@
             android:layout_height="wrap_content"
             android:text="REGISTAR"
             android:id="@+id/registo_button"
-            />
+            android:onClick="registar"
+            tools:ignore="OnClick" />
 
 
     </LinearLayout>
