--- a/layout/activity_main.xml
+++ b/layout/activity_main.xml
@@ -4,22 +4,34 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/menu_gradient"
+    android:background="@drawable/novo4_fundo"
     tools:context=".MainActivity">
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="43dp"
+        android:hint="FITapp"
+        android:textColorHint="#ffffff"
+        android:textSize="75dp"
+        />
+
     <EditText
-        android:id="@+id/name_button"
+        android:id="@+id/email_space"
         android:layout_width="180dp"
         android:layout_height="35dp"
         android:layout_centerInParent="true"
         android:background="#11000000"
         android:ems="10"
-       android:hint="Nome"
+        android:hint="Email"
         android:textColorHint="#ffffff"
-        android:inputType="textPersonName" />
+        android:textColor="#ffffff"
+        android:inputType="textEmailAddress" />
 
     <EditText
-        android:id="@+id/pass_button"
+        android:id="@+id/password_space"
         android:layout_width="180dp"
         android:layout_height="35dp"
         android:layout_alignParentBottom="true"
@@ -29,6 +41,7 @@
         android:ems="10"
         android:hint="Password"
         android:textColorHint="#ffffff"
+        android:textColor="#ffffff"
         android:inputType="textPassword" />
 
 
@@ -40,9 +53,21 @@
         android:layout_centerHorizontal="true"
         android:text="REGISTAR"
         android:textColor="#ffffff"
+        android:onClick="openactivity_registo"
         android:layout_marginBottom="21dp"
-        android:background="#11000000" />
+        android:background="#11000000"
+        tools:ignore="OnClick" />
 
+    <TextView
+        android:id="@+id/esqueceu_password_text"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="154dp"
+        android:hint="Esqueceu a Password"
+        android:onClick="openactivity_esqueceupassword"
+        android:textColorHint="#ffffff" />
 
 
     <Button
@@ -54,7 +79,10 @@
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="92dp"
-        android:text="Login" />
+        android:onClick="Login"
+        android:text="Login"
+        tools:ignore="OnClick" />
+
 
     <ProgressBar
         android:id="@+id/login_progress"
@@ -64,5 +92,18 @@
         android:layout_alignTop="@+id/login_button"
         android:layout_centerHorizontal="true"
         tools:ignore="UnknownId" />
+
+
+
+
+    <com.facebook.login.widget.LoginButton
+        android:id="@+id/login_fb_button"
+        android:layout_width="wrap_content"
+        android:layout_height="3dp"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:onClick="buttonLoginFb"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginBottom="59dp" />
 
 </RelativeLayout>
