--- a/layout/activity_registo.xml
+++ b/layout/activity_registo.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Registo">
+    android:background="@drawable/novo4_fundo"
+    tools:context=".app.Registo">
 
     <TextView
         android:id="@+id/textView"
@@ -14,67 +15,127 @@
         android:layout_centerHorizontal="true"
         android:layout_marginTop="14dp"
         android:text="Registo"
+        android:textColor="#ffffff"
         android:textSize="50sp"
         tools:layout_editor_absoluteX="107dp"
         tools:layout_editor_absoluteY="21dp" />
 
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_below="@id/textView">
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
+        android:verticalScrollbarPosition="right"
         android:layout_marginBottom="106dp"
         android:orientation="vertical">
 
 
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content">
-
-            <EditText
-                android:id="@+id/name_space"
-                android:layout_width="326dp"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="20dp"
-                android:hint="Nome"
-                android:inputType="textPersonName" />
 
 
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content">
+        <EditText
+            android:id="@+id/nome_registo"
+            android:layout_width="326dp"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="20dp"
+            android:hint="Nome Completo"
+            android:textColorHint="#ffffff"
+            android:textColor="#ffffff"
+            android:textSize="17dp"
+            android:inputType="textPersonName" />
 
-            <EditText
-                android:id="@+id/email_space"
-                android:layout_width="326dp"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="20dp"
-                android:hint="Email"
-                android:inputType="textEmailAddress" />
-
-
-
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content">
-
-            <EditText
-                android:id="@+id/password_space"
-                android:layout_width="326dp"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="20dp"
-                android:hint="Password"
-                android:inputType="textPassword|numberPassword" />
-
+        <!--Tem que haver alteraçoes-->
+        <TextView
+            android:id="@+id/data_nascimento_registo"
+            android:layout_width="326dp"
+            android:layout_height="38dp"
+            android:layout_marginBottom="20dp"
+            android:hint=" Data de Nascimento"
+            android:textColorHint="#ffffff"
+            android:textColor="#ffffff"
+            android:textSize="17dp"
+            android:onClick="onClick_mostraData" />
 
 
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content">
+        <EditText
+        android:id="@+id/genero_registo"
+        android:layout_width="326dp"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="20dp"
+        android:hint="Género"
+        android:textColorHint="#ffffff"
+        android:textSize="17dp"
+        android:textColor="#ffffff"
+        android:inputType="textEmailAddress" />
 
-            <EditText
-                android:id="@+id/cpassword_space"
-                android:layout_width="326dp"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="20dp"
-                android:hint="Confirm Password"
-                android:inputType="textPassword|numberPassword" />
+        <EditText
+            android:id="@+id/morada_registo"
+            android:layout_width="326dp"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="20dp"
+            android:hint="Morada"
+            android:textColorHint="#ffffff"
+            android:textSize="17dp"
+            android:textColor="#ffffff"
+            android:inputType="textEmailAddress" />
+
+        <EditText
+            android:id="@+id/Codigo_postal_registo"
+            android:layout_width="326dp"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="20dp"
+            android:hint="Código Postal"
+            android:textColorHint="#ffffff"
+            android:textSize="17dp"
+            android:textColor="#ffffff"
+            android:inputType="textEmailAddress" />
+
+        <EditText
+            android:id="@+id/numero_telefone_registo"
+            android:layout_width="326dp"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="20dp"
+            android:hint="Número de telefone"
+            android:textColorHint="#ffffff"
+            android:textSize="17dp"
+            android:textColor="#ffffff"
+            android:inputType="textEmailAddress" />
+
+        <EditText
+            android:id="@+id/email_registo"
+            android:layout_width="326dp"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="20dp"
+            android:hint="Email"
+            android:textColorHint="#ffffff"
+            android:textSize="17dp"
+            android:textColor="#ffffff"
+            android:inputType="textEmailAddress" />
+
+
+        <EditText
+            android:id="@+id/password_registo"
+            android:layout_width="326dp"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="20dp"
+            android:hint="Password"
+            android:textSize="17dp"
+            android:textColorHint="#ffffff"
+            android:textColor="#ffffff"
+            android:inputType="textPassword" />
+
+
+        <EditText
+            android:id="@+id/cpassword_registo"
+            android:layout_width="326dp"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="20dp"
+            android:hint="Confirm Password"
+            android:textColorHint="#ffffff"
+            android:textSize="17dp"
+            android:textColor="#ffffff"
+            android:inputType="textPassword" />
 
 
         <Button
@@ -82,8 +143,10 @@
             android:layout_height="wrap_content"
             android:text="REGISTAR"
             android:id="@+id/registo_button"
-            />
+            android:onClick="registar"
+            tools:ignore="OnClick" />
 
 
     </LinearLayout>
+    </ScrollView>
 </RelativeLayout>
